Fix CustomerService
